--- a/Code/ChangeSizes.ipynb
+++ b/Code/ChangeSizes.ipynb
@@ -26,47 +26,19 @@
     "from tvsclib.toeplitz_operator import ToeplitzOperator\n",
     "from tvsclib.mixed_system import MixedSystem\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.linalg as linalg"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "matrix = np.array([\n",
-    "        [5,     4,     6,     1,     4,     2],\n",
-    "        [2,     3,     2,     1,     3,     4],\n",
-    "        [6,     3,     5,     4,     1,     1],\n",
-    "        [3,     5,     5,     5,     3,     4],\n",
-    "        [2,     4,     3,     6,     1,     2],\n",
-    "        [2,     4,     4,     1,     5,     4]\n",
-    "])\n",
-    "matrix = np.vstack((np.hstack((matrix,matrix)),np.hstack((matrix,matrix))))\n",
-    "dims_in =  np.array([2, 1, 2, 1])*2\n",
-    "dims_out = np.array([1, 2, 1, 2])*2\n",
-    "T = ToeplitzOperator(matrix, dims_in, dims_out)\n",
-    "S = SystemIdentificationSVD(T)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "system = MixedSystem(S).causal_system\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "system.to_matrix()"
+    "## Some code to test code\n",
+    "\n",
+    "Show system displays the represented matrix and the boundaries.\n",
+    "\n",
+    "Check dims checks if the matrix sizes for A,B,C and D fit together"
    ]
   },
   {
@@ -136,8 +108,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_dims(system,return_report=True,text_output=False)\n",
+    "#check_dims(system,return_report=True,text_output=False)\n",
     "#show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#system.reachability_matricies()"
    ]
   },
   {
@@ -172,17 +153,21 @@
     "    sys.stages[v].B_matrix = sys.stages[v].B_matrix[:,:-1]\n",
     "    #set the appropriate D_v+1\n",
     "    sys.stages[v+1].D_matrix=np.hstack((sys.stages[v+1].C_matrix@col,sys.stages[v+1].D_matrix))\n",
-    "    sys.stages[v+1].B_matrix=np.hstack((sys.stages[v+1].A_matrix@col,sys.stages[v+1].B_matrix))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "move_left(system,0)\n",
-    "show_system(system)"
+    "    sys.stages[v+1].B_matrix=np.hstack((sys.stages[v+1].A_matrix@col,sys.stages[v+1].B_matrix))\n",
+    "    \n",
+    "    #make it minimal if nececarry\n",
+    "    U,s,Vt= np.linalg.svd(np.hstack((sys.stages[v].A_matrix,sys.stages[v].B_matrix)),full_matrices=False)\n",
+    "    display(s)\n",
+    "    tol = 1e-13\n",
+    "\n",
+    "    if abs(s[-1])<tol:\n",
+    "        #not full rank-> not minimal -> reduce dimentions\n",
+    "        print('remove')\n",
+    "        sys.stages[v].A_matrix = Vt[:-1,:sys.stages[v].A_matrix.shape[1]]#*s[:-1])\n",
+    "        sys.stages[v].B_matrix = Vt[:-1,sys.stages[v].A_matrix.shape[1]:]#*s[:-1])\n",
+    "        \n",
+    "        sys.stages[v+1].A_matrix=sys.stages[v+1].A_matrix@U[:,:-1]\n",
+    "        sys.stages[v+1].C_matrix=sys.stages[v+1].C_matrix@U[:,:-1]"
    ]
   },
   {
@@ -217,17 +202,24 @@
     "    sys.stages[v+1].C_matrix = sys.stages[v+1].C_matrix[1:,:]\n",
     "    #set the appropriate D_v and C_v+1\n",
     "    sys.stages[v].D_matrix=np.vstack((sys.stages[v].D_matrix,row@sys.stages[v].B_matrix))\n",
-    "    sys.stages[v].C_matrix=np.vstack((sys.stages[v].C_matrix,row@sys.stages[v].A_matrix))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "move_down(system,0)\n",
-    "show_system(system)"
+    "    sys.stages[v].C_matrix=np.vstack((sys.stages[v].C_matrix,row@sys.stages[v].A_matrix))\n",
+    "    \n",
+    "    #make it minimal if nececarry\n",
+    "    U,s,Vt= np.linalg.svd(np.vstack((sys.stages[v+1].A_matrix,sys.stages[v+1].C_matrix)),full_matrices=False)\n",
+    "    display(U)\n",
+    "    display(s)\n",
+    "    display(Vt)\n",
+    "    tol = 1e-13\n",
+    "\n",
+    "    if abs(s[-1])<tol:\n",
+    "        #not full rank-> not minimal -> reduce dimentions\n",
+    "        print('remove')\n",
+    "        sys.stages[v+1].A_matrix = U[:sys.stages[v+1].A_matrix.shape[0],:-1]*s[:-1].reshape(-1,1)\n",
+    "        sys.stages[v+1].C_matrix = U[sys.stages[v+1].A_matrix.shape[0]:,:-1]*s[:-1].reshape(-1,1)\n",
+    "        \n",
+    "        sys.stages[v].A_matrix=Vt[:-1,:]@sys.stages[v].A_matrix\n",
+    "        sys.stages[v].B_matrix=Vt[:-1,:]@sys.stages[v].B_matrix\n",
+    "        "
    ]
   },
   {
@@ -310,7 +302,7 @@
     "            ])\n",
     "        sys.stages[v+1].A_matrix = np.hstack((sys.stages[v+1].A_matrix,np.zeros((sys.stages[v+1].A_matrix.shape[0],1))))\n",
     "        sys.stages[v].A_matrix = np.vstack((sys.stages[v].A_matrix,c))\n",
-    "        sys.stages[v].C_matrix = np.vstack((sys.stages[v].C_matrix,d))\n",
+    "        sys.stages[v].B_matrix = np.vstack((sys.stages[v].B_matrix,d))\n",
     "        \n",
     "    else:\n",
     "        #in range -> no need for an additional dim\n",
@@ -327,11 +319,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test the mooves"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test them if state dims are constant\n",
+    "\n",
+    "The represented matrix is Rank 1. This means that the state is always 1-dim."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "matrix = np.arange(0,12).reshape((-1,1))@np.arange(0,12).reshape((1,-1))\n",
+    "dims_in =  np.array([2, 1, 2, 1])*2\n",
+    "dims_out = np.array([1, 2, 1, 2])*2\n",
+    "T = ToeplitzOperator(matrix, dims_in, dims_out)\n",
+    "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
+    "\n",
+    "system = MixedSystem(S).causal_system\n",
     "show_system(system)"
    ]
   },
@@ -341,7 +356,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "move_up(system,0)\n",
+    "move_right(system,0)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
     "show_system(system)"
    ]
   },
@@ -351,7 +368,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_dims(system)"
+    "move_left(system,0)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)"
    ]
   },
   {
@@ -361,13 +381,137 @@
    "outputs": [],
    "source": [
     "move_down(system,2)\n",
-    "print('1')\n",
     "check_dims(system)\n",
-    "move_up(system,2)\n",
-    "print('2')\n",
-    "check_dims(system)\n",
-    "\n",
+    "display(system.dims_state)\n",
     "show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "move_up(system,2)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check the shifts if the number of states changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.random.rand(12,12)\n",
+    "Q,R = np.linalg.qr(A)\n",
+    "\n",
+    "\n",
+    "matrix = np.zeros((12,12))\n",
+    "matrix[:,:]=(Q[:,:4]@np.array([1,1,0,0])).reshape(-1,1)\n",
+    "matrix[:,4:6]=(Q[:,:4]@np.array([1,1,0.1,0])).reshape(-1,1)\n",
+    "#plt.imshow(matrix)\n",
+    "\n",
+    "\n",
+    "dims_in =  np.array([2, 1, 2, 1])*2\n",
+    "dims_out = np.array([1, 2, 1, 2])*2\n",
+    "T = ToeplitzOperator(matrix, dims_in, dims_out)\n",
+    "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
+    "system = MixedSystem(S).causal_system\n",
+    "\n",
+    "\n",
+    "show_system(system)\n",
+    "system.dims_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "move_right(system,0)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "move_left(system,0)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.random.rand(12,12)\n",
+    "Q,R = np.linalg.qr(A)\n",
+    "\n",
+    "\n",
+    "matrix = np.zeros((12,12))\n",
+    "matrix[:,:]=(Q[:,:4]@np.array([1,1,0,0])).reshape(-1,1)\n",
+    "matrix[:,4:6]=(Q[:,:4]@np.array([1,1,0.1,0])).reshape(-1,1)\n",
+    "#plt.imshow(matrix)\n",
+    "matrix = matrix.T\n",
+    "\n",
+    "dims_in =  np.array([2, 1, 2, 1])*2\n",
+    "dims_out = np.array([1, 2, 1, 2])*2\n",
+    "T = ToeplitzOperator(matrix, dims_in, dims_out)\n",
+    "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
+    "system = MixedSystem(S).causal_system\n",
+    "\n",
+    "\n",
+    "show_system(system)\n",
+    "system.dims_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "move_up(system,1)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "move_down(system,1)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combine and Split"
    ]
   },
   {
@@ -398,6 +542,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def split(sys,v,indices=(-1,-1),tol = 5e-15):\n",
+    "    #function that splits the timestep v in two timesteps\n",
+    "    #the parameter indices determine how to split the output and input\n",
+    "    #indices[0]: last row in the first step\n",
+    "    #indices[1]: last collumn in the first timestep\n",
+    "    \n",
+    "    if indices[0]<0:\n",
+    "        indices[0] = np.floor(sys.stages[v].D_matrix.shape[0]/2)\n",
+    "    if indices[1]<0:\n",
+    "        indices[1] = np.floor(sys.stages[v].D_matrix.shape[1]/2)        \n",
+    "    \n",
+    "    U,s,Vt= np.linalg.svd(np.block([\n",
+    "            [sys.stages[v].A_matrix,sys.stages[v].B_matrix[:,:indices[1]]],\n",
+    "            [sys.stages[v].C_matrix[indices[0]:,:],sys.stages[v].D_matrix[indices[0]:,:indices[1]]]\n",
+    "            ]))\n",
+    "    \n",
+    "    n_in = sys.stages[v].A_matrix.shape[1] #dims of state bevore and after\n",
+    "    n_out = sys.stages[v].A_matrix.shape[0]\n",
+    "    display(s)\n",
+    "    n = np.count_nonzero(s>tol)\n",
+    "    print(\"n:\",n)\n",
+    "    \n",
+    "    rs = np.sqrt(s)\n",
+    "    Us=U*rs\n",
+    "    sVt=Vt*rs.reshape(-1,1)\n",
+    "    stage_a=Stage(sVt[:n,:n_in],\n",
+    "                  sVt[:n,n_in:],\n",
+    "                  sys.stages[v].C_matrix[:indices[0],:],\n",
+    "                  sys.stages[v].D_matrix[:indices[0],:indices[1]])\n",
+    "    stage_b=Stage(Us[:n_out,:n],\n",
+    "                  sys.stages[v].B_matrix[:,indices[1]:],\n",
+    "                  Us[n_out:,:n],\n",
+    "                  sys.stages[v].D_matrix[indices[0]:,indices[1]:])\n",
+    "    \n",
+    "    sys.stages.insert(v,stage_a)\n",
+    "    sys.stages[v+1]=stage_b\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix = np.array([\n",
+    "        [5,     4,     6,     1,     4,     2],\n",
+    "        [2,     3,     2,     1,     3,     4],\n",
+    "        [6,     3,     5,     4,     1,     1],\n",
+    "        [3,     5,     5,     5,     3,     4],\n",
+    "        [2,     4,     3,     6,     1,     2],\n",
+    "        [2,     4,     4,     1,     5,     4]\n",
+    "])\n",
+    "matrix = np.vstack((np.hstack((matrix,matrix)),np.hstack((matrix,matrix))))\n",
+    "\n",
+    "dims_in =  np.array([2, 1, 2, 1])*2\n",
+    "dims_out = np.array([1, 2, 1, 2])*2\n",
+    "T = ToeplitzOperator(matrix, dims_in, dims_out)\n",
+    "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
+    "\n",
+    "system = MixedSystem(S).causal_system\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "show_system(system)"
    ]
   },
@@ -407,15 +620,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combine(system,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "combine(system,1)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
     "show_system(system)"
    ]
   },
@@ -425,7 +632,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_dims(system)"
+    "split(system,1,indices=(4,2))\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make a rank1 matrix and add an off point to make the rank change, if it is included."
    ]
   },
   {
@@ -434,7 +651,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system.stages"
+    "matrix = np.arange(0,12).reshape((-1,1))@np.arange(0,12).reshape((1,-1))\n",
+    "matrix[6,5]=10\n",
+    "dims_in =  np.array([2, 1, 2, 1])*2\n",
+    "dims_out = np.array([1, 2, 1, 2])*2\n",
+    "T = ToeplitzOperator(matrix, dims_in, dims_out)\n",
+    "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
+    "\n",
+    "system = MixedSystem(S).causal_system\n",
+    "show_system(system)\n",
+    "display(system.dims_state)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combine(system,1)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split(system,1,indices=(4,2))\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combine(system,1)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)"
    ]
   },
   {
