--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,29 +1,55 @@
-% This file was created with JabRef 2.3.1.
-% Encoding: UTF8
 
-@BOOK{Gustavii2003,
-  title = {How to write and illustrate a scientific paper},
-  publisher = {Cambridge University Press},
-  year = {2003},
-  author = {Björn Gustavii},
-  isbn = {978-0-521-53024-8},
-  keywords = {writing},
-  owner = {wbam},
-  timestamp = {2008.07.17},
-  tub = {0202/C.12.2007 A 807}
+@article{vandebril_bibliography_2005,
+	title = {A bibliography on semiseparable matrices*},
+	volume = {42},
+	issn = {1126-5434},
+	url = {https://doi.org/10.1007/s10092-005-0107-z},
+	doi = {10.1007/s10092-005-0107-z},
+	abstract = {Currently there is a growing interest in semiseparable matrices and generalized semiseparable matrices. To gain an appreciation of the historical evolution of this concept, we present in this paper an extensive list of publications related to the field of semiseparable matrices. It is interesting to see that semiseparable matrices were investigated in different fields, e.g., integral equations, statistics, vibrational analysis, independently of each other. Also notable is the fact that leading statisticians at that time used semiseparable matrices without knowing their inverses to be tridiagonal. During this historical evolution the definition of semiseparable matrices has always been a difficult point leading to misunderstandings; sometimes they were defined as the inverses of irreducible tridiagonal matrices leading to generator representable matrices, while in other cases they were defined as matrices having low rank blocks below the diagonal.},
+	pages = {249--270},
+	number = {3},
+	journaltitle = {{CALCOLO}},
+	shortjournal = {Calcolo},
+	author = {Vandebril, R. and Barel, M. Van and Golub, G. and Mastronardi, N.},
+	urldate = {2021-09-14},
+	date = {2005-12-01},
+	langid = {english},
 }
 
-@BOOK{Niederhauser2006,
-  title = {Duden, Die schriftliche Arbeit -- kurz gefasst. Eine Anleitung zum
-	Schreiben von Arbeiten in Schule und Studium},
-  publisher = {Dudenverlag},
-  year = {2006},
-  author = {Jürg Niederhauser},
-  address = {Mannheim},
-  edition = {4},
-  isbn = {3-411-04234-6},
-  keywords = {writing},
-  owner = {wbam},
-  timestamp = {2008.07.14},
-  tub = {1003/KOM 955f 2007 L 404(4)}
+
+@article{grasedyck_theorie_2001,
+	title = {Theorie und Anwendungen Hierarchischer Matrizen},
+	rights = {https://rightsstatements.org/page/{InC}/1.0/},
+	url = {https://macau.uni-kiel.de/receive/diss_mods_00000454},
+	abstract = {The modeling of physical properties often leads to the task of solving partial differential equations or integral equations. The results of some discretisation and linearisation process are matrix equations or linear systems of equations with special features. In the case of partial differential equations one exploits the local character of the differentiation by using some finite element method or finite difference scheme and gains a sparse system matrix. In the case of (nonlocal) integral operators low rank approximations seem to be the method of choice. These are either given explicitly by some multipole method or panel clustering technique or implicitly by rank revealing decompositions. Both types of matrices can be represented as so-called H-matrices. In this thesis we investigate algorithms that perform the addition, multiplication and inversion of H-matrices approximately. Under moderate assumptions the complexity of these new arithmetics is almost linear (linear up to logarithmic terms of order 1 to 3). The arithmetic operations can be performed adaptively, that is up to some given accuracy epsilon the relative error of the operations is zero. The question arises under which circumstances the inverse of an H-matrix can be approximated by an H-matrix. For the techniques used in this thesis we need very restrictive assumptions, but the numerical examples in the last part indicate that the approximability does not depend on these assumptions.},
+	author = {Grasedyck, Lars},
+	urldate = {2022-01-14},
+	date = {2001-08-27},
+	langid = {german},
+	note = {Accepted: 2001-07-20},
+}
+
+@book{hackbusch_hierarchische_2009,
+	location = {Berlin, Heidelberg},
+	title = {Hierarchische Matrizen: Algorithmen und Analysis},
+	isbn = {978-3-642-00222-9},
+	url = {https://doi.org/10.1007/978-3-642-00222-9},
+	publisher = {Springer},
+	author = {Hackbusch, Wolfgang},
+	editor = {Hackbusch, Wolfgang},
+	urldate = {2022-01-14},
+	date = {2009},
+	langid = {german},
+	doi = {10.1007/978-3-642-00222-9},
+}
+
+
+@book{dewilde_time-varying_1998,
+	title = {Time-Varying Systems and Computations},
+	isbn = {978-0-7923-8189-1},
+	abstract = {Preface. 1. Introduction. Part I: Realization. 2. Notation and Properties of Non-Uniform Spaces. 3. Time-Varying State Space Realizations. 4. Diagonal Algebra. 5. Operator Realization Theory. 6. Isometric and Inner Operators. 7. Inner-Outer Factorization and Operator Inversion. Part {II}: Interpolation and Approximation. 8. J-Unitary Operators. 9. Algebraic Interpolation. 10. Hankel-Norm Model Reduction. 11. Low-Rank Matrix Approximation and Subspace Tracking. Part {III}: Factorization. 12. Orthogonal Embedding. 13. Spectral Factorization. 14. Lossless Cascade Factorizations. 15. Conclusions. Appendices: A. Hilbert Space Definitions and Properties. References. Glossary of Notation. Index.},
+	author = {Dewilde, P. and Veen, Alle-Jan},
+	date = {1998-01-01},
+	doi = {10.1007/978-1-4757-2817-0},
+	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/ZSF9ZQA2/Dewilde und Veen - 1998 - Time-Varying Systems and Computations.pdf:application/pdf},
 }
